load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "diff.go",
        "renderer.go",
        "result.go",
    ],
    importpath = "github.com/pipe-cd/pipecd/pkg/diff",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "diff_test.go",
        "renderer_test.go",
        "result_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)
