load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cloner.go",
        "commit.go",
        "repo.go",
    ],
    importpath = "github.com/kapetaniosci/pipe/pkg/git",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "cloner_test.go",
        "commit_test.go",
        "repo_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
