load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "command_darwin.go",
        "command_linux.go",
        "commit.go",
        "repo.go",
        "ssh_config.go",
        "url.go",
    ],
    importpath = "github.com/pipe-cd/pipe/pkg/git",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "client_test.go",
        "commit_test.go",
        "repo_test.go",
        "ssh_config_test.go",
        "url_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/config:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
