load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "applicationcount.go",
        "chunk.go",
        "datapoint.go",
        "filepath.go",
        "milestone.go",
        "utils.go",
    ],
    importpath = "github.com/pipe-cd/pipecd/pkg/insight",
    visibility = ["//visibility:public"],
    deps = ["//pkg/model:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "applicationcount_test.go",
        "chunk_test.go",
        "datapoint_test.go",
        "filepath_test.go",
        "utils_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/model:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
