load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["installer.go"],
    importpath = "github.com/kapetaniosci/pipe/pkg/installer",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["installer_test.go"],
    embed = [":go_default_library"],
)
