load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "jwt.go",
        "signer.go",
        "verifier.go",
    ],
    importpath = "github.com/pipe-cd/pipe/pkg/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/role:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "signer_test.go",
        "verifier_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/role:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
