load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

proto_library(
    name = "model_proto",
    srcs = [
        "application.proto",
        "application_live_state.proto",
        "command.proto",
        "common.proto",
        "deployment.proto",
        "environment.proto",
        "event.proto",
        "logblock.proto",
        "piped.proto",
        "piped_stats.proto",
        "project.proto",
        "role.proto",
        "user.proto",
    ],
    visibility = ["//visibility:public"],
    #keep
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate:validate_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

load("//bazel:pgv_go_proto.bzl", "pgv_go_proto_library")

pgv_go_proto_library(
    name = "model_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_proto"],
    importpath = "github.com/pipe-cd/pipe/pkg/model",
    proto = ":model_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "analysisprovider.go",
        "application.go",
        "application_live_state.go",
        "bson.go",
        "cloudprovider.go",
        "command.go",
        "datastore.go",
        "deployment.go",
        "docs.go",
        "environment.go",
        "event.go",
        "filestore.go",
        "piped.go",
        "project.go",
        "stage.go",
    ],
    embed = [":model_go_proto"],
    importpath = "github.com/pipe-cd/pipe/pkg/model",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mitchellh_mapstructure//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "piped_test.go",
        "project_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
